--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="home rounded bg-grey m-1 p-1">
         <div class="logo">
-          <img class="invert" src="/assets/logo.svg" alt="spotify logo" />
+          <img class="invert" src="./assets/logo.svg" alt="spotify logo" />
         </div>
         <ul>
           <li>
