--- a/index.html
+++ b/index.html
@@ -39,17 +39,7 @@
 
         <div class="songList">
           <ul>
-            <li>
-              <img class="invert" src="./assets/music.svg" alt="music icon">
-              <div class="info">
-                <div class="song-name">Song Name</div>
-                <div class="artist-name">Song Artist</div>
-              </div>
-              <div class="playNow">
-                <span>Play now</span>
-                <img class="playMusic" src="./assets/playbutton.svg" alt="play icon">
-              </div>
-            </li>
+         
           </ul>
         </div>
 
@@ -105,25 +95,7 @@
       </div>
       <div class="spotifyPlaylist">
         <h1>Spotify Playlists</h1>
-        <div class="cardContainer">
-          <div class="card">
-            <div class="play">
-              <img src="./assets/playbutton.svg" alt="play button">
-            </div>
-            <img src="https://i.scdn.co/image/ab67706f0000000249a1ed33d2ca64e6a5d0e550" alt="">
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mood and fill you with happiness!</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <img src="./assets/playbutton.svg" alt="play button">
-            </div>
-            <img src="https://i.scdn.co/image/ab67706f0000000249a1ed33d2ca64e6a5d0e550" alt="">
-            <h2>Happy Hits!</h2>
-            <p>Hits to boost your mood and fill you with happiness!</p>
-          </div>
-
-        </div>
+        <div class="cardContainer"> </div>
 
         <div class="playbar">
           <div class="seekbar">
